--- a/application.html
+++ b/application.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <div id="application"></div>
-        <script src="./application.js"></script>
+        <script src="./test.js"></script>
     </body>
 </html>
